test/org/midica/testfiles/failing/eff-func-bool-with-numeric-1.midica
INCLUDE inc/instruments.midica


0: vol.on()
